Release 1.2.4 (in development)
==============================

Features added
--------------

* Exception logs now contain the last 10 messages emitted by Sphinx.

Bugs fixed
----------

* Now sphinx.ext.autodoc work with python-2.5 again.
* #1563: :meth:`~sphinx.application.Sphinx.add_search_language` raises
  AssertionError for correct type of argument. Thanks to rikoman.
* #1568: fix a crash when a "centered" directive contains a reference.
* PR#288, #1512: env.record_dependency crashes on non-ASCII directories that
  relates to dependency files management like :rst:dir:`include` or
  :rst:dir:`csv-table`. Thanks to Takeshi Komiya.
* PR#285: Test for subclasses of docutils node types when screening
  searchindex. Thanks to Nathan Goldbaum.
* #1576: Special toctree entry "self" located after another entry that also has
  a toctree was replaced with wrong title and link.
* #1584: Point to master doc in HTML "top" link.
* #1585: Autosummary of modules broken in Sphinx-1.2.3.
* #1610: Sphinx cause AttributeError when MeCab search option is enabled and
  python-mecab is not installed.


Release 1.2.3 (released Sep 1, 2014)
====================================

Features added
--------------

* #1518: `sphinx-apidoc` command now have a `--version` option to show version
  information and exit
* New locales: Hebrew, European Portuguese, Vietnamese.

Bugs fixed
----------

* #636: Keep straight single quotes in literal blocks in the LaTeX build.
* #1419: Generated i18n sphinx.js files are missing message catalog entries
  from '.js_t' and '.html'. The issue was introduced from Sphinx-1.1
* #1363: Fix i18n: missing python domain's cross-references with currentmodule
  directive or currentclass directive.
* #1444: autosummary does not create the description from attributes docstring.
* #1457: In python3 environment, make linkcheck cause "Can't convert 'bytes'
  object to str implicitly" error when link target url has a hash part.
  Thanks to Jorge_C.