@@ -34,7 +34,8 @@ def prepare_docstring(s, ignore=1):
         if i < len(lines):
             lines[i] = lines[i].lstrip()
     if margin < sys.maxint:
-        for i in range(ignore, len(lines)): lines[i] = lines[i][margin:]
+        for i in range(ignore, len(lines)):
+            lines[i] = lines[i][margin:]
     # Remove any leading blank lines.
     while lines and not lines[0]:
         lines.pop(0)
